@@ -1,3 +1,8 @@
+2005-10-17  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* macosx/tkMacOSXScrlbr.c (UpdateControlValues): check geomMgrPtr
+	is valid before checking type
+
 2005-10-15  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* library/menu.tcl (::tk::MenuUnpost): remove leftover ] from
